<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".movieList.DetailMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 영화정보란 -->
        <!-- 포스터 -->
        <ImageView
            android:id="@+id/detailPoster"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/detail_movie_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image11" />


        <!-- 영화 제목 -->
        <TextView
            android:id="@+id/detailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/movielist_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPoster" />

        <!-- 평점 -->
        <RatingBar
            android:id="@+id/detailRatingbar"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:rating="5"
            android:saveEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPoster" />

        <!-- 장르 -->
        <TextView
            android:id="@+id/detailGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/movielist_genre"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorWhite"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTitle" />

        <!-- 개봉일자 -->
        <TextView
            android:id="@+id/detailReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_movie_release"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorWhite"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailGenre" />

        <!-- 구분선 -->
        <ImageView
            android:id="@+id/movielist_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/home_slider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailReleaseDate"
            android:contentDescription="@string/movielist_description"/>

        <!-- 줄거리 타이틀 -->
        <TextView
            android:id="@+id/detailOverview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/detail_movie_overview"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movielist_slider" />

        <!-- 줄거리 내용 -->
        <TextView
            android:id="@+id/detailOverView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/detail_movie_overview_contents"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailOverview_title" />

        <!-- 구분선 -->
        <ImageView
            android:id="@+id/movielist_slider2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/movielist_description"
            android:src="@drawable/home_slider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailOverView" />

        <!-- 스트리밍 사이트 검색 -->
        <Button
            android:id="@+id/serachBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_radius"
            android:text="@string/btn_search_streaming"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movielist_slider2" />

        <ImageView
            android:id="@+id/searchImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintEnd_toStartOf="@+id/serachBtn"
            app:layout_constraintTop_toBottomOf="@+id/movielist_slider2"
            android:contentDescription="@string/detail_movie_description" />

        <ImageView
            android:id="@+id/addreviewImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintEnd_toStartOf="@+id/addreviewBtn"
            app:layout_constraintTop_toBottomOf="@+id/serachBtn"
            android:contentDescription="@string/detail_movie_description"/>

        <Button
            android:id="@+id/addreviewBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_radius"
            android:text="@string/btn_add_review"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serachBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>