<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".movieList.MovieListFragment">


    <!-- 포스터 -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/movielist_poster"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:scaleType="centerInside"
            android:src="@drawable/image1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movielist_description"/>

        <TextView
            android:id="@+id/movielist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movielist_poster"
            android:layout_marginTop="10dp"
            android:text="@string/movielist_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movielist_ratingbar" />

        <ImageView
            android:id="@+id/movielist_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movielist_title"
            android:layout_marginTop="10dp"
            android:src="@drawable/home_slider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movielist_poster"
            android:contentDescription="@string/movielist_description"/>

        <TextView
            android:id="@+id/movielist_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movielist_slider"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:text="@string/movielist_genre"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movielist_title" />

        <Button
            android:id="@+id/show_movie_detail_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_radius_full"
            android:text="@string/brn_movielist"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movielist_genre" />

        <RatingBar
            android:id="@+id/movielist_ratingbar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:isIndicator="true"
            android:numStars="10"
            android:rating="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movielist_slider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
