<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:fadeScrollbars="false"
    android:isScrollContainer="true"
    app:layout_scrollFlags="scroll"
    tools:context=".reviewList.DetailReviewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 저장 버튼 -->
        <Button
            android:id="@+id/saveBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rectangle_four_line"
            android:text="@string/btn_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/editBtn"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- 수정 버튼 -->
        <Button
            android:id="@+id/editBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rectangle_four_line"
            android:text="@string/btn_edit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@id/deleteBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/deleteBtn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rectangle_four_line"
            android:text="@string/btn_delete"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- 영화 타이틀 -->

        <ImageButton
            android:id="@+id/note_poster_d"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:contentDescription="@string/detail_review_description"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editBtn" />


        <EditText
            android:id="@+id/note_title_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_poster_d"
            tools:ignore="LabelFor" />

        <RatingBar
            android:id="@+id/note_ratingBar_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:rating="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_title_d" />

        <!-- 평점 입력란 -->

        <!-- 취소 버튼  android:inputType="textLongMessage|textMultiLine-->

        <EditText
            android:id="@+id/note_contents_d"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rectangle_radius"
            android:enabled="false"
            android:gravity="start|top"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:padding="10dp"
            android:scrollHorizontally="true"
            android:singleLine="false"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_ratingBar_d"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>